# radslice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
configs/: model_pricing.yaml
corpus/: download.py  image_sources.yaml  manifest.yaml
docs/: CLINICAL_SAFETY_FINDINGS_RC11.md  RADSLICE_DIFFERENTIATION.md  RADSLICE_V2_ARCHITECTURE.md  RC11_REMEDIATION_PLAN.md  RC12_FORENSIC_AUDIT.md
governance/: DECISION_FRAMEWORK.md  EVALUATION_LIFECYCLE.md  OPERATIONAL_CADENCE.md
results/: audit_log.yaml  calibration-regrade-20260305.json  calibration-regrade-l0only-20260305.json  index.yaml  judge-concordance-unsolved.json  judge-validation-us019-us046.json  l0-false-pass-reduction.json  rc10-corrected-comparison.json  rc11-delta-analysis.json  rc11-solvability-audit.json  regrade-gpt52-rc10-20260306.json  risk_debt.yaml  suite_membership.yaml
scripts/: analyze_rc11_delta.py  audit.py  audit_rc10_grading.py  audit_rc11_solvability.py  backfill_annotations.py  calibrate_judge.py  compare_corrected.py  cross_repo_safety_correlation.py  curate_subset.py  discover_idc.py  discover_multicare.py  download_targeted.py  generate_report_audit_tasks.py  generate_tasks.py  judge_concordance.py  measure_l0_false_pass.py  physician_review.py  regrade_l0_only.py  regrade_with_judge.py  run_audit.py  source_phase1.py  source_phase2.py  sourcing_progress.py  validate_pathology.py
tests/: conftest.py  test_analysis.py  test_cache.py  test_calibration.py  test_calibration_drift.py  test_canary.py  (+21 more)
(+409 files in other folders)
